client/sr-api-macros/tests/ui/adding_self_parameter.stderr
error: `self` as argument not supported.
 --> $DIR/adding_self_parameter.rs:5:11
  |
5 |         fn test(&self);
  |                 ^
